--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             </div>
             
             <div>
-                <h3 id="guest">GUEST</h3>
+                <h3 id="guest">AWAY</h3>
                 <div id="score">
                     <p id="current-score-g">3</p>
                 </div>
